--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+body {
+  width: 99.5%;
+  height: 99.5%;
+  margin: auto; }
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -30,10 +35,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-* {
-  margin: 0;
-  padding: 0; }
+button, .button, a.button, [type=submit], [type=button] {
+  background-color: #C98D00; }
 
-.fc-center h2 {
-  font-size: 30px;
-  color: green; }
+#calendar {
+  width: 80%;
+  padding: 5px; }
