working on additional partial htmls

--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,1 +1,47 @@
-h1 HELLO WORLD
+<div class="sidebar-container sidebar-container-logo">
+	<a href="/"><img src="assets/img/placeholder.jpg" alt="placeholder" /></a>
+</div>
+<div class="sidebar-container sidebar-container-user">
+	<a href="/" class="sidebar-user">
+		<img src="assets/img/placeholder.jpg" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
+		<h2>Guest</h2>
+	</a>
+</div>
+<div class="sidebar-container sidebar-container-function">
+	<button class="btn sidebar-btn sidebar-container-function-element">Upload</button>
+	<button class="btn sidebar-btn sidebar-container-function-element">Friends</button>
+	<button class="btn sidebar-btn sidebar-container-function-element">Enroll</button>
+	<button class="btn sidebar-btn sidebar-container-function-element">Find Common</button>
+</div>
+<div class="sidebar-container sidebar-container-notifs">
+	<div class="sidebar-notif">
+		<h3>hello</h3>
+		<p>
+			notif
+		</p>
+	</div>
+	<div class="sidebar-notif">
+		<h3>hello</h3>
+		<p>
+			notif
+		</p>
+	</div>
+	<div class="sidebar-notif">
+		<h3>hello</h3>
+		<p>
+			notif
+		</p>
+	</div>
+	<div class="sidebar-notif">
+		<h3>hello</h3>
+		<p>
+			notif
+		</p>
+	</div>
+	<div class="sidebar-notif">
+		<h3>hello</h3>
+		<p>
+			notif
+		</p>
+	</div>
+</div>
