--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -72,8 +72,17 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
       flex-flow: column nowrap;
   -ms-flex-line-pack: stretch;
       align-content: stretch;
+  min-width: 92.7px;
   width: 20%;
   height: 100%; }
+
+.sidebar-notif {
+  -ms-flex: 1;
+      flex: 1;
+  margin: 10px;
+  padding: 10px;
+  background-color: #EFEFEF;
+  border-radius: 15px; }
 
 .sidebar-container-logo {
   -ms-flex: 1;
@@ -90,8 +99,6 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
       flex-flow: row nowrap;
   -ms-flex: 1;
       flex: 1;
-  -ms-flex-align: center;
-      align-items: center;
   background-color: #656B7E; }
   .sidebar-container-user-icon {
     margin: 0 20px;
@@ -99,11 +106,19 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
     max-height: 50px;
     vertical-align: middle; }
   .sidebar-container-user h2 {
+    -ms-flex-positive: 1;
+        flex-grow: 1;
     display: inline-block;
     text-decoration: none;
     color: #FEFEFE;
     font-weight: 300; }
   .sidebar-container-user a {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: row nowrap;
+        flex-flow: row nowrap;
+    -ms-flex-align: center;
+        align-items: center;
     width: 100%;
     height: 100%; }
 
@@ -117,6 +132,8 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
       flex: 2.5; }
   .sidebar-container-function-element {
     color: #CFCFCF;
+    -ms-flex-positive: 1;
+        flex-grow: 1;
     text-align: left;
     padding: 2vh 0 2vh 20%;
     letter-spacing: 0.8px;
@@ -126,6 +143,10 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
       color: #EFEFEF; }
 
 .sidebar-container-notifs {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap;
   -ms-flex: 5.5;
       flex: 5.5;
   background-color: #656B7E; }
