--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -4,7 +4,7 @@
 <div class="sidebar-container sidebar-container-user">
 	<a href="/" class="sidebar-user">
 		<img src="assets/img/placeholder.jpg" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
-		<h2>Guest</h2>
+		<h2>Clifford Lee</h2>
 	</a>
 </div>
 <div class="sidebar-container sidebar-container-function">
@@ -14,31 +14,64 @@
 	<button class="btn sidebar-btn sidebar-container-function-element">Find Common</button>
 </div>
 <div class="sidebar-container sidebar-container-notifs">
-	<div class="sidebar-notif">
+	<div class="notif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="sidebar-notif">
+	<div class="notif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="sidebar-notif">
+	<div class="notif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="sidebar-notif">
+	<div class="notif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="sidebar-notif">
+	<div class="notif">
+		<h3>hello</h3>
+		<p>
+			notif
+		</p>
+	</div>
+	<div class="notif">
+		<h3>hello</h3>
+		<p>
+			notif
+		</p>
+	</div>
+	<div class="notif">
+		<h3>hello</h3>
+		<p>
+			notif
+		</p>
+	</div>
+	<div class="notif">
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
+		<h3>hello</h3>
 		<h3>hello</h3>
 		<p>
 			notif
