more work on the sidebar

--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -8,10 +8,10 @@
 	</a>
 </div>
 <div class="sidebar-container sidebar-container-function">
-	<button class="btn sidebar-btn sidebar-container-function-element">Upload</button>
-	<button class="btn sidebar-btn sidebar-container-function-element">Friends</button>
-	<button class="btn sidebar-btn sidebar-container-function-element">Enroll</button>
-	<button class="btn sidebar-btn sidebar-container-function-element">Find Common</button>
+	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-upload fa-md"></i> Upload (.pdf/.ics)</button>
+	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-address-book-o fa-md"></i> Friends</button>
+	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-book fa-md"></i> Enroll in a Class</button>
+	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-search fa-md"></i> Find Common</button>
 </div>
 <div class="sidebar-container sidebar-container-notifs">
 	<div class="notif">
