working on additional partial htmls

--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -1,9 +1,14 @@
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">x</span>
-    <p>Some text in the Modal..</p>
-  </div>
-
+<div class="login-modal">
+    <span class="close"><i class="fa fa-close fa-md"></i></span>
+    <div class="login-modal-content">
+        <h2>Sign In</h2>
+        <form class="login-form" action="" method="post">
+            <input type="text" name="Email" value="" placeholder="Email">
+            <input type="password" name="Password" value="" placeholder="Password">
+            <div class="login-submit">
+                <input type="submit" name="register" value="Register">
+                <input type="submit" name="login" value="Log In">
+            </div>
+        </form>
+    </div>
 </div>
