--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -2,10 +2,10 @@
 	<a href="/"><img src="assets/img/placeholder.jpg" alt="placeholder" /></a>
 </div>
 <div class="sidebar-container sidebar-container-user">
-	<a href="/" class="sidebar-user">
+	<button class="sidebar-user" id="loginButton">
 		<img src="assets/img/placeholder.jpg" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
 		<h2>Clifford Lee</h2>
-	</a>
+	</button>
 </div>
 <div class="sidebar-container sidebar-container-function">
 	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-upload fa-md"></i> Upload (.pdf/.ics)</button>
