--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -8,7 +8,7 @@
 	</button>
 </div>
 <div class="sidebar-container sidebar-container-function">
-	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-upload fa-md"></i> Upload (.pdf/.ics)</button>
+	<button class="btn sidebar-btn sidebar-container-function-element" id="uploadButton"><i class="fa fa-upload fa-md"></i> Upload (.pdf/.ics)</button>
 	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-address-book-o fa-md"></i> Friends</button>
 	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-book fa-md"></i> Enroll in a Class</button>
 	<button class="btn sidebar-btn sidebar-container-function-element"><i class="fa fa-search fa-md"></i> Find Common</button>
