--- a/assets/scss/modules/sidebar.scss
+++ b/assets/scss/modules/sidebar.scss
@@ -24,6 +24,7 @@
             flex-flow: row nowrap;
             flex: 1;
             background-color: $grey;
+            cursor: pointer;
             &-icon {
                 margin: 0 20px;
                 border-radius: 50%;
