--- a/assets/scss/widgets/modal.scss
+++ b/assets/scss/widgets/modal.scss
@@ -12,4 +12,9 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    box-shadow: 20px 20px 10px #888;
+
+    &-active {
+        display: block;
+    }
 }
