--- a/assets/scss/widgets/modal.scss
+++ b/assets/scss/widgets/modal.scss
@@ -12,9 +12,23 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    box-shadow: 20px 20px 10px #888;
-
-    &-active {
-        display: block;
+    transition: 0.3s;
+    &-content {
+        box-shadow: 0px 10px 5px #666;
     }
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
