--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -1,7 +1,10 @@
-<div class="login-modal">
+<div class="modal-login modal-content">
     <span class="close"><i class="fa fa-close fa-md"></i></span>
-    <div class="login-modal-content">
+    <div class="modal-login-content">
+
+
         <h2>Sign In</h2>
+
         <form class="login-form" action="" method="post">
             <input type="text" name="Email" value="" placeholder="Email">
             <input type="password" name="Password" value="" placeholder="Password">
@@ -10,5 +13,7 @@
                 <input type="submit" name="login" value="Log In">
             </div>
         </form>
+
+
     </div>
 </div>
