--- a/partials/uploadModal.html
+++ b/partials/uploadModal.html
@@ -1,4 +1,4 @@
-<div class="login-modal">
+<div class="modal-upload modal-content">
     <span class="close"><i class="fa fa-close fa-md"></i></span>
     <h1>
         HELLO YOU TUUUUUUBE
