--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,6 +93,8 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
   transition: 0.3s; }
   .modal-content {
     box-shadow: 0px 10px 5px #666; }
+  .modal-active {
+    display: block; }
 
 /* The Close Button */
 .close {
@@ -146,6 +148,15 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
       display: flex;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap; }
+
+.modal-upload {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  height: 50%;
+  border-radius: 15px; }
 
 #calendar {
   padding: 2% 2%;
