--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -9,5 +9,6 @@
 @import "widgets/modal";
 
 @import "modules/login";
+@import "modules/upload";
 @import "modules/calendar";
 @import "modules/sidebar";
