--- a/assets/scss/widgets/modal.scss
+++ b/assets/scss/widgets/modal.scss
@@ -16,6 +16,9 @@
     &-content {
         box-shadow: 0px 10px 5px #666;
     }
+    &-active {
+        display: block;
+    }
 }
 
 /* The Close Button */
