--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -5,11 +5,13 @@
 
         <h2>Sign In</h2>
 
-        <form class="login-form" action="" method="post">
+        <form class="login-form">
             <input type="text" name="Email" value="" placeholder="Email" id="username">
             <input type="password" name="Password" value="" placeholder="Password" id="password">
-            <input type="button" value="Login" id="submit" onclick="validateLogin()"/>
-            <input type="button" value="Register" id="register" onclick="validateCreate()"/>
+            <div class="buttongroup">
+                <input type="button" value="Login" id="submit" onclick="validateLogin()"/>
+                <input type="button" value="Register" id="register" onclick="validateCreate()"/>
+            </div>
         </form>
 
 
