--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -2,12 +2,24 @@
     <span class="close"><i class="fa fa-close fa-md"></i></span>
     <div class="modal-login-content">
 
-
         <h2>Sign In</h2>
 
         <form class="login-form">
-            <input type="text" name="Email" value="" placeholder="Email" id="username">
-            <input type="password" name="Password" value="" placeholder="Password" id="password">
+            <ul>
+                <li><a href="#tabs-1">Login</a></li>
+                <li><a href="#tabs-2">Register</a></li>
+            </ul>
+            <div id="tabs-1">
+                <input type="text" name="username" value="" placeholder="username" id="username">
+                <input type="password" name="Password" value="" placeholder="Password" id="password">
+            </div>
+            
+            <div id="tabs-2">
+                <input type="text" name="username" value="" placeholder="username" id="username">
+                <input type="text" name="email" value="" placeholder="email" id="email">
+                <input type="password" name="Password" value="" placeholder="Password" id="password">
+            </div>
+            
             <div class="buttongroup">
                 <input type="button" value="Login" id="submit" onclick="validateLogin()"/>
                 <input type="button" value="Register" id="register" onclick="validateCreate()"/>
