login tabs created
need to move tab js to login.js file

--- a/assets/scss/modules/login.scss
+++ b/assets/scss/modules/login.scss
@@ -1,5 +1,8 @@
 // login.scss
 
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+@import url('http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css');
+
 /* Modal Content/Box */
 .modal-login {
     background-color: #fefefe;
@@ -56,4 +59,50 @@
             width: 80%;
         }
     }
+}
+
+/* Tabbed Panes */
+
+#container {
+    width:350px
+}
+#tabbox {
+    height:40px
+}
+#panel {
+    background-color:#FFF;
+    height:250px;
+}
+
+.tab {
+    background: #dedede;display: block;height: 40px;
+    line-height: 40px;text-align: center;
+    width: 80px;float: right;font-weight: bold;
+    -webkit-border-top-left-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
+    -moz-border-radius: 4px 4px 0px 0px;
+}
+a {
+    color: #000;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
+
+.signup {
+    margin-left:8px;
+}
+.select {
+    background-color:#FFF;
+}
+
+#loginbox {
+    min-height:150px;
+    padding:10px;
+}
+
+#signupbox {
+    min-height:150px;
+    padding:10px;
+    display:none;
 }
