--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -160,6 +162,51 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
           justify-content: space-around; }
     .modal-login-content .login-form {
       width: 80%; }
+
+/* Tabbed Panes */
+#container {
+  width: 350px; }
+
+#tabbox {
+  height: 40px; }
+
+#panel {
+  background-color: #FFF;
+  height: 250px; }
+
+.tab {
+  background: #dedede;
+  display: block;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  width: 80px;
+  float: right;
+  font-weight: bold;
+  -webkit-border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-radius: 4px 4px 0px 0px; }
+
+a {
+  color: #000;
+  margin: 0;
+  padding: 0;
+  text-decoration: none; }
+
+.signup {
+  margin-left: 8px; }
+
+.select {
+  background-color: #FFF; }
+
+#loginbox {
+  min-height: 150px;
+  padding: 10px; }
+
+#signupbox {
+  min-height: 150px;
+  padding: 10px;
+  display: none; }
 
 .modal-upload {
   background-color: #fefefe;
