--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -1,29 +1,29 @@
 <div class="modal-login modal-content">
     
 <!--    Add this to the login.js-->
-    <script type="text/javascript"              src="http://ajax.googleapis.com/
-ajax/libs/jquery/1.5/jquery.min.js"></script>
-    
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $(".tab").click(function() {
-                var X=$(this).attr('id');
-                
-                if(X=='signup')
-                {
-                    $("#signup").addClass('select');
-                    $("#signupbox").slideDown();
-                }
-                else
-                {
-                    $("#signup").removeClass('select');
-                    $("#login").addClass('select');
-                    $("#signupbox").slideUp();
-                    $("#loginbox").slideDown();
-                }
-            });
-        });
+   
+    <!--
+   <script type="text/javascript">
+//        $(document).ready(function() {
+//            $(".tab").click(function() {
+//                var X=$(this).attr('id');
+//                
+//                if(X=='signup')
+//                {
+//                    $("#signup").addClass('select');
+//                    $("#signupbox").slideDown();
+//                }
+//                else
+//                {
+//                    $("#signup").removeClass('select');
+//                    $("#login").addClass('select');
+//                    $("#signupbox").slideUp();
+//                    $("#loginbox").slideDown();
+//                }
+//            });
+//        });
     </script>
+-->
     
     <span class="close"><i class="fa fa-close fa-md"></i></span>
     <div class="modal-login-content">
