--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -217,6 +217,28 @@ a {
   height: 50%;
   border-radius: 15px; }
 
+.modal-friends {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  width: 60%;
+  border-radius: 15px; }
+  .modal-friends-content {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: row nowrap;
+        flex-flow: row nowrap; }
+    .modal-friends-content-sidebar {
+      width: 30%;
+      height: 500px;
+      margin: 2.5% 0 2.5% 0;
+      overflow: scroll;
+      background-color: salmon; }
+    .modal-friends-content-main {
+      width: 70%;
+      margin: 2.5% 0 2.5% 0;
+      background-color: lightblue; }
+
 #calendar {
   padding: 2% 2%;
   width: 80%; }
