--- a/partials/friendsModal.html
+++ b/partials/friendsModal.html
@@ -3,11 +3,65 @@
     <div class="modal-friends-content">
 
         <div class="modal-friends-content-sidebar">
-            <h2>yas</h2>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 1</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 2</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 3</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 1</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 2</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 3</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 1</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 2</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 3</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 1</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 2</h4>
+            </div>
+            <div class="friend">
+                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
+                <h4>Friend 3</h4>
+            </div>
         </div>
 
         <div class="modal-friends-content-main">
-            <h2>bitch</h2>
+            <ul>
+                <li><a href="javascript:void(0)" class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, '')">Friends Requests</a></li>
+                <li><a href="javascript:void(0)" class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, '')">Notifications</a></li>
+                <li><a href="javascript:void(0)" class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, '')">Search</a></li>
+                <li class="modal-friends-content-main-tabcontent">
+                    
+                </li>
+            </ul>
         </div>
 
     </div>
