--- a/assets/scss/widgets/friend.scss
+++ b/assets/scss/widgets/friend.scss
@@ -3,7 +3,7 @@
 .friend {
 
     padding: 10px;
-    background-color: green;
+    background-color: $grey;
 
     &-img {
         max-width: 50px;
