--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -8,8 +8,8 @@
         
         <div id="container">    
             <div id="tabbox">
-                <a href="#" id="signup" class="tab signup" onclick = "loginSwitchTabs()">Signup</a>
-                <a href="#" id="login" class="tab select" onclick = "loginSwitchTabs()">Login</a>
+                <a href="#" id="signup" class="tab signup" onclick = "loginSwitchTabs('signup')">Signup</a>
+                <a href="#" id="login" class="tab select" onclick = "loginSwitchTabs('login')">Login</a>
             </div>
                 
             <div id="panel">
