catch me working on those partials tho lul

--- a/partials/friendsModal.html
+++ b/partials/friendsModal.html
@@ -54,14 +54,63 @@
         </div>
 
         <div class="modal-friends-content-main">
-            <ul>
-                <li><a href="javascript:void(0)" class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, '')">Friends Requests</a></li>
-                <li><a href="javascript:void(0)" class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, '')">Notifications</a></li>
-                <li><a href="javascript:void(0)" class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, '')">Search</a></li>
-                <li class="modal-friends-content-main-tabcontent">
-                    
-                </li>
+            <ul class="modal-friends-content-main-tablist">
+                <li class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, 'notifsTab')">Notifications</li>
+                <li class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, 'friendRequestsTab')">Friends Requests</li>
+                <li class="modal-friends-content-main-tablinks" onclick="openFriendsTab(event, 'searchTab')">Search</li>
             </ul>
+            <div class="modal-friends-content-main-tabcontent" id="notifsTab">
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notifOoh looky a notifOoh looky a notifOoh looky a notifOoh looky a notifOoh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+                <div class="friendnotif">
+                    <img src="assets/img/placeholder.jpg" alt="notification source image" class="friendnotif-icon"/>
+                    <p class="friendnotif-msg">Ooh looky a notif</p>
+                </div>
+            </div>
+            <div class="modal-friends-content-main-tabcontent" id="friendRequestsTab">
+                <h2>yas</h2>
+            </div>
+            <div class="modal-friends-content-main-tabcontent" id="searchTab">
+                <h2>YES</h2>
+            </div>
         </div>
 
     </div>
