--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -9,55 +9,55 @@
 </div>
 <div class="sidebar-container sidebar-container-function">
 	<button class="btn sidebar-btn sidebar-container-function-element" id="createButton"><i class="fa fa-plus-circle fa-md"></i>  Create Event</button>
-	<button class="btn sidebar-btn sidebar-container-function-element" id="uploadButton"><i class="fa fa-upload fa-md"></i>  Upload (.pdf/.ics)</button>
+	<button class="btn sidebar-btn sidebar-container-function-element" id="uploadButton"><i class="fa fa-upload fa-md"></i>  Upload (.ics)</button>
 	<button class="btn sidebar-btn sidebar-container-function-element" id="friendsButton"><i class="fa fa-address-book-o fa-md"></i>  Friends</button>
 	<button class="btn sidebar-btn sidebar-container-function-element" id="enrollButton"><i class="fa fa-book fa-md"></i>  Enroll in a Class</button>
 	<button class="btn sidebar-btn sidebar-container-function-element" id="commonButton"><i class="fa fa-search fa-md"></i>  Find Common</button>
 </div>
 <div class="sidebar-container sidebar-container-notifs">
-	<div class="notif">
+	<div class="eventnotif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="notif">
+	<div class="eventnotif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="notif">
+	<div class="eventnotif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="notif">
+	<div class="eventnotif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="notif">
+	<div class="eventnotif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="notif">
+	<div class="eventnotif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="notif">
+	<div class="eventnotif">
 		<h3>hello</h3>
 		<p>
 			notif
 		</p>
 	</div>
-	<div class="notif">
+	<div class="eventnotif">
 		<h3>hello</h3>
 		<h3>hello</h3>
 		<h3>hello</h3>
