--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,5 +12,6 @@
 @import "modules/login";
 @import "modules/upload";
 @import "modules/friends";
+@import "modules/createEvent";
 @import "modules/calendar";
 @import "modules/sidebar";
